--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.6.1",
-    "@strapi/plugin-users-permissions": "4.6.1",
-    "@strapi/strapi": "4.6.1",
+    "@strapi/plugin-i18n": "4.9.1",
+    "@strapi/plugin-users-permissions": "4.9.1",
+    "@strapi/strapi": "4.9.1",
+    "axios": "^1.6.7",
+    "firebase-admin": "^12.0.0",
     "mysql": "2.18.1",
     "omise": "^0.10.1"
   },
