--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.6.7",
     "firebase-admin": "^12.0.0",
     "mysql": "2.18.1",
-    "omise": "^0.10.1"
+    "omise": "^0.10.1",
+    "strapi-plugin-fcm": "^1.0.8"
   },
   "author": {
     "name": "A Strapi developer"
